<resources>
    <string name="app_name">InfiniteGallery</string>
    <string name="label_none">None</string>
    <string name="label_brush">Brush</string>
    <string name="label_shape">Shape</string>
    <string name="label_oval">Oval</string>
    <string name="label_rectangle">Rectangle</string>
    <string name="label_line">Line</string>
    <string name="label_arrow">Arrow</string>
    <string name="label_emoji">Emoji</string>
    <string name="label_sticker">Sticker</string>
    <string name="label_eraser">Eraser</string>
    <string name="label_eraser_mode">Eraser Mode</string>
    <string name="label_text">Text</string>
    <string name="label_filter">Filter</string>
    <string name="label_adjust">Adjust</string>
    <string name="msg_save_image">Are you want to exit without saving image ?</string>
    <string name="app_intent_name">PhotoEditor</string>
    <string name="msg_save_image_to_share">Please save image to share</string>
    <string name="msg_share_image">Share Image</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="move_to_trash_when_delete">Move to trash when delete</string>
    <string name="language">Vietnamese</string>
    <string name="selected_photos">Selected %1$d photos.</string>
    <string name="no_item">No item</string>
    <string name="we_couldn_t_find_any_photos_on_your_device">We couldn\'t find any photos on your device</string>
    <string name="no_favorite_images">No favorite images</string>
    <string name="photos_you_liked_are_shown_here">Photos you liked are shown here</string>
    <string name="no_item_found">No item found</string>
    <string name="the_photos_you_set_to_be_private_will_be_collected_here">The photos you set to be private will be collected here</string>
    <string name="developed_by_infinity_team">Developed by Group 11 - Infinity Team</string>
    <string name="items_in_trash_will_be_removed_after_30_days">Items in trash will be removed after 30 days.</string>
    <string name="the_photos_you_deleted_will_be_collected_here">The photos you deleted will be collected here</string>
    <string name="done">Done</string>
    <string name="please_wait">Please wait...</string>
    <string name="we_couldn_t_find_any_albums_on_your_device">We couldn\'t find any albums on your device</string>
    <string name="eraser_size">Eraser size</string>
    <string name="favorites">Favorites</string>
    <string name="_0_photos">0 photos</string>
    <string name="privacy">Privacy</string>
    <string name="trash_bin">Trash Bin</string>
    <string name="december_03_2023">December 03, 2023</string>
    <string name="selected_0">Selected 0</string>
    <string name="found_nothing">Found nothing</string>
    <string name="sorry_we_couldn_t_find_any_matches_to_your_search">Sorry, we couldn\'t find any matches to your search</string>
    <string name="brush">Brush</string>
    <string name="opacity">Opacity</string>
    <string name="shape">Shape</string>
    <string name="close">Close</string>
    <string name="album_name">Album name</string>
    <string name="_29_days">29 days</string>
    <string name="photo_s_information">Photo\'s information</string>
    <string name="size_and_date_of_image">Size and Date of Image</string>
    <string name="enter_the_saved_secure_question_and_answer_to_change_the_password">Enter the saved secure question and answer to change the password</string>
    <string name="answer">Answer</string>
    <string name="new_password">New Password</string>
    <string name="show">Show</string>
    <string name="retype_new_password">Retype New Password</string>
    <string name="apply_change">Apply Change</string>
    <string name="please_fill_out_your_password_to_confirm_the_authentication">Please fill out your password to confirm the authentication</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password</string>
    <string name="finding_other_methods">Finding other methods ?</string>
    <string name="finger_print">Fingerprint</string>
    <string name="pattern">Pattern</string>
    <string name="enter_your_new_secure_question_and_answer_along_with_the_password">Enter your new secure question and answer, along with the password</string>
    <string name="retype_password">Retype Password</string>
    <string name="sign_up">Sign up</string>
    <string name="add_photos">Add photos</string>
    <string name="photos">Photos</string>
    <string name="albums">Albums</string>
    <string name="search">Search</string>
    <string name="more">More</string>
    <string name="hide">Hide</string>
    <string name="edit">Edit</string>
    <string name="share">Share</string>
    <string name="reveal">Reveal</string>
    <string name="add_new_albums">Add new albums</string>
    <string name="camera">Camera</string>
    <string name="select">Select</string>
    <string name="sort_by">Sort by</string>
    <string name="columns">Columns</string>
    <string name="settings">Settings</string>
    <string name="_2_columns">2 columns</string>
    <string name="_3_columns">3 columns</string>
    <string name="_4_columns">4 columns</string>
    <string name="_5_columns">5 columns</string>
    <string name="reveal_all">Reveal all</string>
    <string name="reset_password">Reset Password</string>
    <string name="clear_password">Clear Password</string>
    <string name="delete_all_files">Delete All Files</string>
    <string name="view_as">View as</string>
    <string name="timeline">Timeline</string>
    <string name="grid">Grid</string>
    <string name="rename">Rename</string>
    <string name="restore_all">Restore all</string>
    <string name="empty_trash">Empty trash</string>
    <string name="restore">Restore</string>
    <string name="search_your_photos">Search your photos</string>
    <string name="confirm_deletion_title">Confirm deletion</string>
    <string name="confirm_deletion_message">Are you sure to move %1$d photos to the trash?</string>
    <string name="confirm_deletion_one_photo_message">Are you sure to move this photo to the trash?</string>
    <string name="confirm_permanent_deletion_title">Confirm permanent deletion</string>
    <string name="confirm_permanent_deletion_message">"Are you sure to permanently delete this photo? This action cannot be undone."</string>
    <string name="confirm_dialog_yes">Yes</string>
    <string name="confirm_dialog_no">No</string>
    <string name="confirm_hiding_title">Confirm hiding</string>
    <string name="confirm_hiding_message">Are you sure to move this photo to the privacy list?</string>
    <string name="confirm_hiding_list_photos_message">Are you sure to move  %1$d photos to the privacy list?</string>
    <string name="title_october_15">October 15, 2023</string>
    <string name="subtitle_05_49_pm">05:49 PM</string>
    <string name="add_to_album">Add to %1$s</string>
    <string name="confirm_move_photos">Are you sure to move %1$d photos to %2$s?</string>
    <string name="move_photos">Move photos</string>
    <string name="create_new_album">Create New Album</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="num_photos">%1$d photos</string>
    <string name="privacy_album">Privacy</string>
    <string name="privacy_registration">Privacy Registration</string>
    <string name="privacy_authentication">Privacy Authentication</string>
    <string name="privacy_change_password">Privacy Password Change</string>
    <string name="confirm_the_reveal">Confirm the reveal</string>
    <string name="confirm_reveal_all_photos">Are you sure to reveal all the private photos?</string>
    <string name="confirm_delete_all_files">Confirm deleting all the private files</string>
    <string name="confirm_delete_all_files_description">Are you sure to delete the whole private files? This action cannot be undone.</string>
    <string name="confirm_empty_trash_bin">Confirm empty trash bin</string>
    <string name="confirm_empty_trash_bin_description">Are you sure to empty the trash bin? This action cannot be undone.</string>
    <string name="confirm_restore">Confirm Restore</string>
    <string name="confirm_restore_description">Are you sure to restore all photos?</string>
    <string name="date_format">MMMM d, yyyy</string>
    <string name="time_format">hh:mm a</string>
    <string name="tag_type">Card type: </string>
    <string name="country">Country: </string>
    <string name="card_id">Card ID: </string>
    <string name="expiration_date">Valid until: </string>
    <string name="full_name">Full name: </string>
    <string name="nationality">Nationality: </string>
    <string name="dob">Date of birth: </string>
    <string name="gender">Gender: </string>
    <string name="address">Address: </string>
    <string name="issuing_state_code">Issuing state code: </string>
    <string name="driver_class">Driver class: </string>
    <string name="expiration_date_no_limit">No expiration</string>
    <string name="slideshow_delay_seconds">Slideshow delay seconds</string>
    <string-array name="choice_items">
        <item>1 seconds</item>
        <item>2 seconds</item>
        <item>3 seconds</item>
        <item>4 seconds</item>
        <item>5 seconds</item>
    </string-array>
    <string name="copy_to">Copy to</string>
    <string name="move_to">Move to</string>
    <string name="slideshow">Slideshow</string>
    <string name="rotate">Rotate</string>
    <string name="rotate_left">Rotate left</string>
    <string name="rotate_right">Rotate right</string>
    <string name="rotate_180_u00b0">Rotate 180°</string>
    <string name="set_as_home_screen">Set as Home screen</string>
    <string name="set_as_lock_screen">Set as Lock screen</string>
    <string name="details">Details</string>
    <string name="recognize_card">Recognize card by OCR</string>
</resources>