<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/camera"
        android:title="@string/camera" />

    <item
        android:id="@+id/addPhotos"
        android:title="@string/add_photos" />

    <item
        android:id="@+id/select"
        android:title="@string/select" />

    <item
        android:id="@+id/columns"
        android:title="@string/columns" >
        <menu>

            <item
                android:id="@+id/column_3"
                android:title="@string/_3_columns" />

            <item
                android:id="@+id/column_4"
                android:title="@string/_4_columns" />

            <item
                android:id="@+id/column_5"
                android:title="@string/_5_columns" />

        </menu>
    </item>

    <item
        android:id="@+id/viewAs"
        android:title="@string/view_as" >

        <menu>

            <item
                android:id="@+id/viewAsTimeline"
                android:title="@string/timeline" />

            <item
                android:id="@+id/viewAsGrid"
                android:title="@string/grid" />

        </menu>

    </item>

    <item
        android:id="@+id/sortBy"
        android:title="@string/sort_by" />

    <item
        android:id="@+id/rename"
        android:title="@string/rename" />

    <item
        android:id="@+id/settings"
        android:title="@string/settings" />

</menu>