<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/more_copyTo"
        android:title="@string/copy_to"/>

    <item
        android:id="@+id/more_moveTo"
        android:title="@string/move_to"/>

    <item
        android:id="@+id/more_slideshow"
        android:title="@string/slideshow"/>

    <item
        android:id="@+id/more_rotate"
        android:title="@string/rotate">
        <menu>
            <item
                android:id="@+id/rotateLeft"
                android:title="@string/rotate_left"/>
            <item
                android:id="@+id/rotateRight"
                android:title="@string/rotate_right"/>
            <item
                android:id="@+id/rotate180"
                android:title="@string/rotate_180_u00b0"/>
        </menu>
    </item>

    <item
        android:id="@+id/more_rename"
        android:title="@string/rename"/>

    <item
        android:id="@+id/more_setAsHomeScreen"
        android:title="@string/set_as_home_screen"/>

    <item
        android:id="@+id/more_setAsLockScreen"
        android:title="@string/set_as_lock_screen"/>


    <item
        android:id="@+id/more_details"
        android:title="@string/details"/>

    <item
        android:id="@+id/more_recognizeCard"
        android:title="@string/recognize_card"/>
</menu>