<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="@string/reveal_all"
        android:id="@+id/privacymenu_Reveal"
        android:icon="@drawable/ic_privacy_reveal_24"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/privacymenu_Select"
        android:title="@string/select" />
    <item
        android:id="@+id/privacymenu_ResetPassword"
        android:title="@string/reset_password" />
    <item
        android:id="@+id/privacymenu_ClearPassword"
        android:title="@string/clear_password" />

    <item
        android:id="@+id/privacymenu_DeleteAll"
        android:title="@string/delete_all_files" />

    <item
        android:id="@+id/privacymenu_Settings"
        android:title="@string/settings" />

</menu>