<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menuAlbumsAdd"
        android:title="@string/add_new_albums"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_albums_add_24" />

    <item
        android:id="@+id/menuAlbumsCamera"
        android:title="@string/camera" />

    <item
        android:id="@+id/menuAlbumsSelect"
        android:title="@string/select" />

    <item
        android:id="@+id/menuAlbumsSortBy"
        android:title="@string/sort_by" >
        <menu
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </item>

    <item
        android:id="@+id/menuAlbumsColumns"
        android:title="@string/columns" >
        <menu
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </item>

    <item
        android:id="@+id/menuAlbumsSettings"
        android:title="@string/settings" />

</menu>