<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_login_background"
    tools:context=".privacy.PrivacySignupActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarForPrivacyForgetPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/privacy_change_password"
        app:titleMarginStart="30dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_the_saved_secure_question_and_answer_to_change_the_password"
        android:gravity="center"
        android:textSize="16sp"
        android:textStyle="italic"
        android:layout_marginTop="100dp"
        />

    <Spinner
        android:id="@+id/secure_ques_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:minHeight="48dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/secure_ans"
        android:hint="@string/asnwer"
        android:minHeight="48dp"
        android:inputType="text"
        android:background="@drawable/round_corner_widget"
        android:padding="10dp"
        android:layout_marginVertical="10dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:gravity="fill_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/passwordField"
            android:layout_weight="5"
            android:hint="@string/new_password"
            android:minHeight="48dp"
            android:inputType="textPassword"
            android:background="@drawable/round_corner_widget"
            android:padding="10dp"
            android:layout_margin="10dp" />


        <Button
            android:id="@+id/showTypeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/round_corner_widget"
            android:padding="10dp"
            android:layout_marginTop="8dp"
            android:text="@string/show"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:gravity="fill_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/retypePasswordField"
            android:layout_weight="5"
            android:hint="@string/retype_new_password"
            android:background="@drawable/round_corner_widget"
            android:padding="10dp"
            android:minHeight="48dp"
            android:inputType="textPassword"
            android:layout_margin="10dp" />


        <Button
            android:id="@+id/showRetypeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/round_corner_widget"
            android:padding="10dp"
            android:layout_marginTop="8dp"
            android:text="@string/show"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/change_applyChange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/round_corner_widget"
            android:padding="15dp"
            android:text="@string/apply_change"/>


    </LinearLayout>

</LinearLayout>