<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".trashbin.TrashBinActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarTrashBin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/trash_bin"
        app:titleMarginStart="30dp" />

    <LinearLayout
        android:id="@+id/fragmentTrashBin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/items_in_trash_will_be_removed_after_30_days"
            android:layout_marginVertical="5dp"
            android:paddingStart="10dp" />

        <ViewSwitcher
            android:id="@+id/viewSwitcher"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/emptyView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_marginTop="-100dp"
                    android:src="@drawable/img_trash_empty"
                    android:alpha=".75"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/no_item"
                    android:textSize="16sp"
                    android:textColor="?colorSecondary" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/the_photos_you_deleted_will_be_collected_here"
                    android:textSize="14sp" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recViewTrash"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </ViewSwitcher>

    </LinearLayout>

</LinearLayout>