<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".privacy.PrivacyActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarForPrivacy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/privacy_album"
        app:titleMarginStart="30dp" />

        <ViewSwitcher
            android:id="@+id/privacy_viewSwitcher"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/emptyView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_marginTop="-120dp"
                    android:src="@drawable/img_image_empty"
                    android:alpha=".75" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/no_item_found"
                    android:textSize="16sp"
                    android:textColor="?colorSecondary" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/the_photos_you_set_to_be_private_will_be_collected_here"
                    android:textSize="14sp" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/privacyRecView"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </ViewSwitcher>

</LinearLayout>