<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".optionsearch.SearchFragment">

    <!-- TODO: Update blank fragment layout -->

    <SearchView
        android:id="@+id/searchView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:queryHint="@string/search_your_photos"
        android:iconifiedByDefault="false"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="16dp"
        android:queryBackground="@android:color/transparent"
        android:background="@drawable/sl_search_bar_border"

        />

    <ViewSwitcher
        android:id="@+id/viewSwitcher"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:id="@+id/emptyView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center" >

            <ImageView
                android:layout_marginTop="-100dp"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:src="@drawable/img_search_empty"
                android:alpha=".75" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/found_nothing"
                android:textSize="16sp"
                android:textColor="?colorSecondary" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/sorry_we_couldn_t_find_any_matches_to_your_search"
                android:textSize="14sp" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recViewPhotos"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>


    </ViewSwitcher>

</LinearLayout>