<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".favorites.FavoriteActivity">

    <LinearLayout
        android:id="@+id/fragmentFavorites"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarFavorite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/favorites"
                app:titleMarginStart="30dp"
                android:visibility="visible" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarPhotosSelection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/Theme.MyTheme.AllPhotosTheme"
                android:visibility="gone"
                app:contentInsetStart="0dp" >

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnTurnOffSelectionMode"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    style="@style/MyIconButtonCancelReversedStyle" />

                <TextView
                    android:id="@+id/txtNumberOfSelected"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:text="@string/selected_0"
                    style="@style/TextAppearance.AppCompat.Title" />

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/checkboxAll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginRight="10dp"
                    android:buttonTint="?attr/colorSecondary" />

            </androidx.appcompat.widget.Toolbar>

        </FrameLayout>

        <ViewSwitcher
            android:id="@+id/viewSwitcher"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/emptyView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_marginTop="-100dp"
                    android:src="@drawable/img_favorites_empty"
                    android:alpha=".75" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/no_favorite_images"
                    android:textSize="16sp"
                    android:textColor="?colorSecondary" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/photos_you_liked_are_shown_here"
                    android:textSize="14sp" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recViewFavorites"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </ViewSwitcher>

    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/selectionBottomBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="8dp"
        app:itemIconSize="28dp"
        android:layout_alignParentBottom="true"
        app:itemTextAppearanceActiveBoldEnabled="false"
        app:itemPaddingBottom="7dp"
        app:itemPaddingTop="7dp"
        app:labelVisibilityMode="labeled"
        app:menu="@menu/menu_favorites_selection_bottom"
        style="@style/BottomNavPhotoStyle"
        android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"
        android:visibility="gone" />

</RelativeLayout>